--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="author" content="Nikita Bobers" />
+    <meta name="description" content="Contact page" />
+    <meta name="keywords" content="Nikita Bobers contact" />
     <script src="https://kit.fontawesome.com/0634e71a94.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
     <title>Nikita Bobers</title>
