--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div id="particles-js">
         <div id="box">
           <h1>NIKITA BOBERS</h1>
-          <p class="about">Software Developer</p>
+          <p class="about">Software Engineer</p>
           <!-- <p class="about">{Design, Code, <span>Sleep,</span> Repeat}</p> -->
           <!-- <p class="contact"><a href="#" target="_blank">Work</a></p>
           <p class="contact"><a href="#" target="_blank">Social</a></p>
