--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Nikita Bobers" />
     <meta name="description" content="Contact page" />
     <meta name="keywords" content="Nikita Bobers contact" />
-    <!-- <script src="https://kit.fontawesome.com/0634e71a94.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/0634e71a94.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
     <title>Nikita Bobers</title>
   </head>
@@ -19,18 +19,20 @@
           <p class="about">Software Engineer</p>
           <div class="icons">
             <p>
-              <a href="https://github.com/nikitabobers" target="_blank"><img class="icon" src="./icons/github.svg"/></a>
+              <a href="https://github.com/nikitabobers" target="_blank"><i class="fab fa-github-square fa-lg"></i></a>
             </p>
             <p>
               <a href="https://www.linkedin.com/in/nikita-bobers-6b229a139/" target="_blank"
-                ><img src="./icons/linkedin.svg"
-              /></a>
+                ><i class="fab fa-linkedin fa-lg"></i
+              ></a>
             </p>
             <p>
-              <a href="https://www.facebook.com/nikita.bobers" target="_blank"><img src="./icons/facebook.svg"/></a>
+              <a href="https://www.facebook.com/nikita.bobers" target="_blank">
+                <i class="fab fa-facebook-square fa-lg"></i
+              ></a>
             </p>
             <p>
-              <a href="https://www.instagram.com/nbobers/" target="_blank"><img src="./icons/instagram.svg"/></a>
+              <a href="https://www.instagram.com/nbobers/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
             </p>
           </div>
         </div>
